--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,6 @@ file (GLOB_RECURSE ALL_SRC_FILES *.hpp *.cpp)
 add_custom_target (format "clang-format" -i ${ALL_SRC_FILES} COMMENT "Formatting source code...")
 
 add_subdirectory(membw)
-add_subdirectory(PA1)
-add_subdirectory(PA2)
+add_subdirectory(PA)
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
