--- a/PA/CMakeLists.txt
+++ b/PA/CMakeLists.txt
@@ -6,5 +6,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -Wall -Wextra -pthread")
 
 add_subdirectory(PA1-1)
 add_subdirectory(PA1-2)
+add_subdirectory(PA2)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
