chore: fetch dependency.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,9 @@
 cmake_minimum_required(VERSION 3.28.3)
 project(PPAA)
 
-if (${PROJECT_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
-  message(FATAL_ERROR "Minnow must be built outside its source directory, e.g. `cmake -B build`.")
-endif()
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
-file (GLOB_RECURSE ALL_SRC_FILES *.hpp *.cpp)
-add_custom_target (format "clang-format" -i ${ALL_SRC_FILES} COMMENT "Formatting source code...")
+include(NoInSourceBuilds)
 
 add_subdirectory(membw)
 add_subdirectory(PA)
