--- a/PA/CMakeLists.txt
+++ b/PA/CMakeLists.txt
@@ -1,3 +1,8 @@
+project(PA LANGUAGES CXX)
+
+include(OneTBB)
+include(GoogleBenchmark)
+
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
