chore: more readable.

--- a/PA/CMakeLists.txt
+++ b/PA/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(PA LANGUAGES CXX)
 
 include(OneTBB)
-include(GoogleBenchmark)
+# include(GoogleBenchmark)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
