--- a/PA/PA1-2/CMakeLists.txt
+++ b/PA/PA1-2/CMakeLists.txt
@@ -1,5 +1,7 @@
+project(PA1-2 LANGUAGES CXX)
+
 file(GLOB SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
 foreach(SOURCE ${SOURCES})
     get_filename_component(EXECUTABLE_NAME ${SOURCE} NAME_WE)
-    add_executable(${EXECUTABLE_NAME} ${SOURCE})
+    add_executable(${PROJECT_NAME}-${EXECUTABLE_NAME} ${SOURCE})
 endforeach()
